--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
         "psr-4": {
             "Easy\\": "src/"
         }
+    },
+    "require": {
+        "phpunit/phpunit": "~4.0|~5.0"
     }
 }
