--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
   - 5.5
   - 5.6
   - 7.0
+  - hhvm
 
 services:
   - redis-server
@@ -14,6 +15,9 @@ branches:
 
 matrix:
   fast_finish: true
+  allow_failures:
+      - php: 7.0
+      - php: hhvm
 
 install: travis_retry composer install
 
